<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbarSize="0dp"
    tools:context=".Common.LoginSignup.AgrocabersStartupScreen">

    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"

            android:src="@drawable/agrocabers_circle_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/caber_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:text="@string/caber_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:onClick="callLoginScreen"
                android:background="@drawable/button_background"
                android:text="@string/login"
                android:transitionName="transition_login"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:onClick="callSignupScreen"
                android:background="@drawable/button_background"
                android:transitionName="transition_signup"
                android:text="@string/sign_up"
                android:textColor="@color/black" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_we_work"
            android:background="#00000000"
            android:textColor="@color/black"
            android:layout_weight="2"
            android:layout_marginTop="20dp"/>


    </LinearLayout>

</ScrollView>