<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.SignUp"
    android:background="@color/white"

    android:scrollbarSize="0dp"
    android:transitionName="transition_signup"
    >


    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



            <ImageView
                android:id="@+id/signup_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/back_btn_icon"
                android:transitionName="transition_back_arrow_btn"/>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:transitionName="transition_title_text"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/signup_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your info always keep private"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli"
            android:layout_marginTop="10dp"
            android:transitionName="transition_desc_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">
            
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/full_name"

                app:startIconDrawable="@drawable/field_full_name_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:fontFamily="@font/muli_semibold"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                app:startIconDrawable="@drawable/field_username_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                android:layout_marginBottom="5dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:fontFamily="@font/muli_semibold"

                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                app:startIconDrawable="@drawable/field_email_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                android:layout_marginBottom="5dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/muli_semibold"

                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/field_password_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:passwordToggleTint="@color/black"
                app:passwordToggleEnabled="true"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:fontFamily="@font/muli_semibold"

                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"/>
            </com.google.android.material.textfield.TextInputLayout>



            
        </LinearLayout>

        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:background="@drawable/button_background"
            android:layout_marginTop="20dp"

            android:onClick="callNextSignupScreen"
            android:fontFamily="@font/muli_bold"
            android:textColor="@color/black"
            android:elevation="5dp"
            android:transitionName="transition_next_btn"/>

        <Button
            android:id="@+id/signup_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="#00000000"
            android:fontFamily="@font/muli_bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:elevation="5dp"
            android:transitionName="transition_login_btn"/>



    </LinearLayout>

</ScrollView>