<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Common.LoginSignup.Signup3rdClass"
    android:scrollbarSize="0dp">

    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_btn_icon"
            android:transitionName="transition_back_arrow_btn" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:fontFamily="@font/muli_black"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                android:transitionName="transition_title_text"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/signup_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your info always keep private"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli"
            android:layout_marginTop="10dp"
            android:transitionName="transition_desc_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">


            <com.hbb20.CountryCodePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_showFlag="true"
                app:ccp_showFullName="true"
                app:ccp_contentColor="@color/black"
                android:layout_marginBottom="10dp"
                app:ccp_showNameCode="true"
                android:background="@drawable/black_border"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:startIconDrawable="@drawable/field_phone_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:fontFamily="@font/muli_semibold"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:elevation="5dp"
            android:fontFamily="@font/muli_bold"
            android:onClick="callOTPScreen"
            android:text="@string/next_btn"
            android:textColor="@color/black"
            android:transitionName="transition_next_btn" />

        <Button
            android:id="@+id/signup_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:elevation="5dp"
            android:fontFamily="@font/muli_bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:transitionName="transition_login_btn" />


    </LinearLayout>

</ScrollView>