<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.VerifyOTP"
    android:background="@color/white"
    android:scrollbarSize="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">
        
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:tint="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_code_text"
            android:textColor="@color/black"
            android:textSize="100sp"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification_text"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_description_text"
            android:textSize="16sp"
            android:fontFamily="@font/muli"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>
        
        <com.chaos.view.PinView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/black"
            android:itemBackground="@color/banner_background_light"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/muli_bold"
            android:background="@color/colorPrimary"
            android:text="VERIFY CODE"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/resend_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't receive SMS?"
                android:textSize="16sp"
                android:fontFamily="@font/muli"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:includeFontPadding="false"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Resend Code"
                android:textSize="16sp"
                android:fontFamily="@font/muli_bold"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:includeFontPadding="false"
                android:layout_gravity="center"
                android:layout_toRightOf="@id/resend_desc"/>
        </RelativeLayout>







    </LinearLayout>

</ScrollView>